# MES

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
communication/: modbus_register_map.h
include/core/: application.h  logger.h
include/device/: device_manager.h
include/machine/: board_mapping_manager.h  machine_manager.h
include/material/: material_manager.h
include/product/: product_manager.h
include/resources/: resource_manager.h
include/ui/: mainwindow.h  material_detail_widget.h  material_main_widget.h
include/ui/canvas/: workflow_canvas.h  workflow_connection.h  workflow_node.h
include/ui/dialogs/: edit_product_dialog.h  node_properties_dialog.h  time_estimation_dialog.h  workflow_metadata_dialog.h
include/ui/panels/: device_panel.h  node_palette.h  properties_panel.h  resource_panel.h
include/ui/tabs/: board_manager_tab.h  device_manager_tab.h  wpc_editor_tab.h
include/ui/widgets/: product_detail_widget.h  product_main_widget.h  resource_alias_widget.h
include/utils/: file_utils.h  json_utils.h
include/workflow/: node_factory.h  node_types.h  time_estimation.h  workflow_manager.h  workflow_serializer.h
src/: main.cpp
src/core/: application.cpp  logger.cpp
src/device/: device_manager.cpp
src/machine/: board_mapping_manager.cpp  machine_manager.cpp
src/material/: material_manager.cpp
src/product/: product_manager.cpp
src/run/: lad_workflow_executor.cpp  lad_workflow_executor.h
src/ui/: mainwindow.cpp  material_detail_widget.cpp  material_main_widget.cpp
src/ui/canvas/: workflow_canvas.cpp  workflow_connection.cpp  workflow_node.cpp
src/ui/dialogs/: edit_product_dialog.cpp  node_properties_dialog.cpp  time_estimation_dialog.cpp  workflow_metadata_dialog.cpp
src/ui/panels/: device_panel.cpp  node_palette.cpp  properties_panel.cpp  resource_panel.cpp
src/ui/tabs/: board_manager_tab.cpp  device_manager_tab.cpp  resource_manager_tab.cpp  wpc_editor_tab.cpp
src/ui/widgets/: product_detail_widget.cpp  product_main_widget.cpp  resource_alias_widget.cpp
src/utils/: file_utils.cpp  json_utils.cpp
src/workflow/: node_factory.cpp  node_types.cpp  time_estimation.cpp  workflow_manager.cpp  workflow_serializer.cpp
